# pyimager-olegs-mods

./: CMakeLists.txt  CTestCustom.cmake.in  README.md  lofar_config.h.cmake  lofarinit.csh.in  lofarinit.sh.in
CEP/: CMakeLists.txt
CEP/Calibration/pystationresponse/: CMakeLists.txt
CEP/Calibration/pystationresponse/src/: __init__.py  pystationresponse.cc
CEP/Calibration/pystationresponse/test/: CMakeLists.txt
CEP/DP3/DPPP/: CMakeLists.txt
CEP/DP3/DPPP/include/DPPP/: AORFlagger.h  Averager.h  BaselineSelection.h  CMakeLists.txt  DPBuffer.h  DPInfo.h  DPInput.h  DPLogger.h  DPRun.h  DPStep.h  Demixer.h  Filter.h  FlaggerStatistics.h  MSReader.h  MSUpdater.h  MSWriter.h  MedFlagger.h  MsInfo.h  PhaseShift.h  PreFlagger.h  StationAdder.h  TimeBuffer.h  UVWCalculator.h  UVWFlagger.h
CEP/DP3/DPPP/src/: AORFlagger.cc  Averager.cc  BaselineSelection.cc  CMakeLists.txt  DPBuffer.cc  DPInfo.cc  DPInput.cc  DPRun.cc  DPStep.cc  Demixer.cc  Filter.cc  FlaggerStatistics.cc  MSReader.cc  MSUpdater.cc  MSWriter.cc  MedFlagger.cc  MsInfo.cc  NDPPP.cc  PhaseShift.cc  PreFlagger.cc  StationAdder.cc  TimeBuffer.cc  UVWCalculator.cc  UVWFlagger.cc
CEP/DP3/DPPP/test/: tAORFlagger.cc  tAverager.cc  tMedian.cc  tNDPPP.cc  tStationAdder.cc  test_flaggers.cc
CEP/Imager/LofarFT-4.2/: CMakeLists.txt
CEP/Imager/LofarFT-4.2/include/LofarFT/: ATermLofar.h  ATermLofar.h~  CMakeLists.txt  ConvolutionFunction.h  FFTCMatrix.h  FTMachine.h  FTMachineBregman.h  FTMachineSimple.h  FTMachineSplitBeam.h  FTMachineSplitBeamWStack.h  FTMachineSplitBeamWStackSingleGrid.h  Imager.h  VisResampler.h  WTerm.h
CEP/Imager/LofarFT-4.2/src/: ATermLofar.cc  ATermLofar.cc~  ATermPython.cc  CMakeLists.txt  ConvolutionFunction.cc  ConvolutionFunctionWsplit.cc  FFTCMatrix.cc  FTMachine.cc  FTMachineBregman.cc  FTMachineSimple.cc  FTMachineSplitBeam.cc  FTMachineSplitBeamWStack.cc  FTMachineSplitBeamWStackSingleGrid.cc  Imager.cc  VisResampler.cc  WTerm.cc  awimager.cc  myaterm.py  new.myaterm.py  stable.myaterm.py
CEP/Imager/LofarFT-4.2/test/: CMakeLists.txt  tFFTCMatrix.cc
CEP/LMWCommon/share/: CMakeLists.txt
CMake/: CMakeASM-BGPInformation.cmake  CMakeDetermineASM-BGPCompiler.cmake  CMakeTestASM-BGPCompiler.cmake  FindLAPACK.cmake  FindMASS.cmake  FindPVSS.cmake  FindUnitTest++.cmake  LofarCTest.cmake  LofarConfig.cmake  LofarFindPackage.cmake  LofarGeneral.cmake  LofarInit.cmake  (+8 more)
LCU/checkhardware/: CMakeLists.txt
MAC/APL/APLCommon/: CMakeLists.txt
MAC/APL/APLCommon/include/APL/APLCommon/: APLCommonExceptions.h  APLUtilities.h  APL_Defines.h  AntennaMapper.h  CMakeLists.txt  CTState.h  ChildControl.h  ControllerAdmin.h  ControllerDefines.h  ControllerInfo.h  ParentControl.h  bitsetUtil.tcc
MAC/APL/APLCommon/src/: APLUtilities.cc  CMakeLists.txt  CTState.cc  ChildControl.cc  ControllerAdmin.cc  ControllerDefines.cc  Controller_Protocol.prot  ParentControl.cc  StartDaemon_Protocol.prot
MAC/APL/APLCommon/test/: CMakeLists.txt  tAPLUtilities.cc  tAntennaMapper.cc  tControllerDefines.cc  tOutOfBand.cc  tbitsetUtil.cc
MAC/APL/CASATools/: CMakeLists.txt
MAC/APL/CASATools/include/CASATools/: CMakeLists.txt
MAC/APL/CASATools/src/: CMakeLists.txt
MAC/APL/CASATools/test/: CMakeLists.txt
MAC/APL/CEPCU/: CMakeLists.txt
MAC/APL/CEPCU/src/: CMakeLists.txt
MAC/APL/CEPCU/src/CEPlogProcessor/: CEPlogProcessor.cc  CEPlogProcessor.h  CEPlogProcessorMain.cc  CMakeLists.txt
MAC/APL/CEPCU/src/OnlineControl/: CMakeLists.txt  OnlineControl.cc  OnlineControl.h  OnlineControlDefines.h  OnlineControlMain.cc
MAC/APL/CEPCU/src/PythonControl/: CMakeLists.txt  PythonControl.cc  PythonControl.h  PythonControlDefines.h  PythonControlMain.cc
MAC/APL/CEPCU/src/_OfflineControl/: CEPApplicationManager.cc  CEPApplicationManager.h  OfflineControl.cc  OfflineControl.h  OfflineControlDefines.h  OfflineControlMain.cc
MAC/APL/CEPCU/test/ApplController/: CMakeLists.txt
MAC/APL/CUDaemons/src/: CMakeLists.txt
MAC/APL/CURTDBDaemons/: CMakeLists.txt
MAC/APL/CURTDBDaemons/src/: CMakeLists.txt
MAC/APL/CURTDBDaemons/src/KeyValueLogger/: CMakeLists.txt  KeyValueLogger.cc  KeyValueLogger.h  KeyValueLoggerMain.cc
MAC/APL/CURTDBDaemons/src/LogProcessor/: CMakeLists.txt  LogProcessor.cc  LogProcessor.h  LogProcessorMain.cc
MAC/APL/CURTDBDaemons/src/SASGateway/: CMakeLists.txt  SASGateway.cc  SASGateway.h  SASGatewayMain.cc
MAC/APL/CURTDBDaemons/src/SoftwareMonitor/: CMakeLists.txt  SoftwareMonitor.cc  SoftwareMonitor.h  SoftwareMonitorMain.cc
MAC/APL/CURTDBDaemons/test/: CMakeLists.txt  tKeyValueLogger.cc  tLoggingProcessor.cc
MAC/APL/PIC/RSP_Driver/: CMakeLists.txt
MAC/APL/PIC/RSP_Driver/src/: BSWrite.cc  BSWrite.h  BWRead.cc  BWRead.h  BWWrite.cc  BWWrite.h  BstRead.cc  BstRead.h  BypassRead.cc  BypassRead.h  BypassWrite.cc  BypassWrite.h  CDOWrite.cc  CDOWrite.h  CMakeLists.txt  CableAttenuation.cc  CableAttenuation.h  CableSettings.cc  CableSettings.h  Cache.cc  Cache.h  Command.h  GetBypassCmd.cc  GetBypassCmd.h  GetClocksCmd.cc  GetClocksCmd.h  GetHBACmd.cc  GetHBACmd.h  GetLatencyCmd.cc  GetLatencyCmd.h  GetRCUCmd.cc  GetRCUCmd.h  GetRawBlockCmd.cc  GetRawBlockCmd.h  GetRegisterStateCmd.cc  GetRegisterStateCmd.h  GetSPUStatusCmd.cc  GetSPUStatusCmd.h  GetSplitterCmd.cc  GetSplitterCmd.h  (+146 more)
MAC/APL/PIC/RSP_Driver/test/: CMakeLists.txt  EPAStub.cc  EPAStub.h  RSPTest.cc  RSPTest.h  RSPTestSuite.h  tCableAttenuation.cc  tRCUCables.cc
MAC/APL/StationCU/src/ClockControl/: CMakeLists.txt  ClockControl.cc  ClockControl.h  ClockControlMain.cc  clkctl.cc  clkctl.h
MAC/APL/StationCU/src/StationControl/: ActiveObs.cc  ActiveObs.h  CMakeLists.txt  StationControl.cc  StationControl.h  StationControlMain.cc
MAC/APL/VHECR/: CMakeLists.txt
MAC/APL/VHECR/include/VHECR/: CMakeLists.txt  TBBReadCmd.h  TBBTrigger.h  VHECRTask.h
MAC/APL/VHECR/src/: CMakeLists.txt  TBBReadCmd.cc  TBBTrigger.cc  VHECRTask.cc
MAC/APL/VHECR/test/: CMakeLists.txt  VHECRtest.cc
MAC/Navigator2/config/: CMakeLists.txt
MAC/Navigator2/scripts/: CMakeLists.txt
MAC/Navigator2/scripts/libs/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt
(+2062 files in other folders)
