# $Id: CMakeLists.txt 22061 2012-09-18 13:13:37Z klijn $

install(FILES
cep2.clusterdesc
development.clusterdesc
full.clusterdesc
imaging.clusterdesc
production.clusterdesc
pulsar.clusterdesc
sub1.clusterdesc
sub2.clusterdesc
sub3.clusterdesc
sub4.clusterdesc
sub5.clusterdesc
sub6.clusterdesc
sub7.clusterdesc
sub8.clusterdesc
local.clusterdesc
cep1_test.clusterdesc
DESTINATION share)
